classDiagram
    direction TB

    %% --- CORE DOMAIN ---
    class User {
        +UUID id
        +VARCHAR username
        +VARCHAR email
        +VARCHAR password
        +VARCHAR first_name
        +VARCHAR last_name
        +DATE birth_date
        +VARCHAR phone_number
        +ENUM role [ROLE_USER, ROLE_ADMIN]
        +ENUM status [ACTIVE, BANNED...]
        +INT following_count
        +INT followers_count
        +TIMESTAMP created_at

        + id: Long
        + username: String
        + email: String
        + password: String
        + firstname: String
        + lastname: String
        + birth_date: LocalDateTime
        + phone_number: String
        + role: UserRole
    }

    class UserProfile {
        +UUID id
        +UUID user_id
        +TEXT bio
        +VARCHAR image_url
        +TIMESTAMP updated_at
    }

    class Follow {
        +UUID id
        +UUID follower_id
        +UUID following_id
        +TIMESTAMP created_at
    }

    class Post {
        +UUID id
        +UUID user_id
        +TEXT content_text
        +VARCHAR privacy_setting
        +TIMESTAMP created_at
    }

    class Comment {
        +UUID id
        +UUID post_id
        +UUID user_id
        +TEXT message
        +TIMESTAMP created_at
    }

    class Reaction {
        +UUID id
        +UUID post_id
        +UUID user_id
        +VARCHAR reaction_type
        +TIMESTAMP created_at
    }

    class Report {
        +UUID id
        +UUID reporter_id
        +UUID post_id
        +TEXT reason
        +VARCHAR status
        +TIMESTAMP created_at
    }

    %% --- HASHTAG (Many-to-Many Fixed) ---
    class Hashtag {
        +UUID id
        +VARCHAR tag_name
        +VARCHAR context_category
    }

    class Post_Hashtag_Mapping {
        +UUID post_id
        +UUID hashtag_id
    }

    %% --- AI & SAFETY ---
    class AI_Safety_Result {
        +UUID id
        +UUID post_id
        +BOOLEAN is_toxic
        +VARCHAR threat_category
        +FLOAT confidence_score
        +TIMESTAMP scanned_at
    }

    %% --- TELEMETRY & ML ENGINE ---
    class User_Telemetry {
        +UUID id
        +UUID user_id
        +UUID post_id
        +VARCHAR interaction_type
        +INT dwell_time_ms
        +BOOLEAN is_clicked
        +VARCHAR session_id
        +TIMESTAMP timestamp
    }

    class Interest_Graph {
        +UUID id
        +UUID user_id
        +VARCHAR topic_name
        +FLOAT weight_score
        +TIMESTAMP last_updated
    }

    class Ranking_Result {
        +UUID id
        +UUID user_id
        +UUID post_id
        +FLOAT pctr_score
        +VARCHAR model_version
        +JSON feature_vector_snapshot
        +TIMESTAMP calculated_at
    }

    %% --- FEED DELIVERY ---
    class Personalized_Feed {
        +UUID id
        +UUID user_id
        +TIMESTAMP generated_at
        +TIMESTAMP expires_at
    }

    class Feed_Post_Mapping {
        +UUID feed_id
        +UUID post_id
        +INT position_index
        +FLOAT cached_score
    }

    %% --- RELATIONSHIPS ---

    User "1" -- "1" UserProfile : has
    User "1" -- "*" Post : creates
    User "1" -- "*" Follow : follows / is followed
    User "1" -- "*" Comment : writes
    User "1" -- "*" Reaction : expresses
    User "1" -- "*" Report : submits

    Post "1" *-- "*" Comment : contains
    Post "1" *-- "*" Reaction : receives
    Post "1" -- "*" Report : is reported

    %% Fixed Hashtag Many-to-Many
    Post "1" -- "*" Post_Hashtag_Mapping : has tags
    Hashtag "1" -- "*" Post_Hashtag_Mapping : tagged in

    %% AI & Feed logic
    Post "1" *-- "1" AI_Safety_Result : scanned by
    User "1" *-- "1" Personalized_Feed : owns
    Personalized_Feed "1" *-- "*" Feed_Post_Mapping : contains
    Post "1" -- "*" Feed_Post_Mapping : appears in

    %% Telemetry & Data
    User "1" -- "*" User_Telemetry : generates
    Post "1" -- "*" User_Telemetry : tracked via
    User "1" *-- "*" Interest_Graph : profiled by
    User "1" -- "*" Ranking_Result : targeted by
    Post "1" -- "*" Ranking_Result : scored for
